# python-tools-demo

./: .editorconfig  .eslintrc.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
bash/deployment-scripts/: README.md  deploy-contract.sh  node-monitor.sh
cpp/crypto-algorithms/: CMakeLists.txt  README.md  keccak256.cpp
go/blockchain-utils/: README.md  go.mod  main.go
haskell/plutus-cardano/: README.md  Vesting.hs  cabal.project
html-css/dapp-landing/: README.md  index.html  script.js  styles.css
java/web3j-backend/: README.md  pom.xml
java/web3j-backend/src/main/java/com/web3/: BlockchainService.java
move/aptos-contract/: Move.toml  README.md
move/aptos-contract/sources/: SimpleToken.move
python/web3-tools/: README.md  requirements.txt  web3_cli.py
rust/solana-program/: Cargo.toml  README.md  rust-toolchain.toml
rust/solana-program/src/: lib.rs
solidity/erc20/: README.md  SimpleToken.sol  foundry.toml
solidity/erc721/: README.md  SimpleNFT.sol
typescript/dapp-frontend/: README.md  index.html  package-lock.json  package.json
typescript/dapp-frontend/src/: WalletConnect.tsx  main.tsx
vyper/evm-contract/: README.md  SimpleVault.vy
zig/wasm-crypto/: README.md  build.zig  sha256.zig
