[package]
name = "solana-counter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple counter program for Solana blockchain"

[dependencies]
solana-program = "1.17"

[dev-dependencies]
solana-program-test = "3.1"
solana-sdk = "1.17"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
